# portfolio-fastapi

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: auth.py  deps.py  tasks.py  users.py
app/core/: config.py  security.py
app/db/: session.py
app/models/: task.py  user.py
app/schemas/: task.py  user.py
app/services/: tasks.py  users.py
tests/: conftest.py  test_auth.py  test_db.py  test_health.py  test_tasks.py  test_users.py
